Changed "Key" to "Legend"

--- a/is290_project_1/Views/Assets/Create.cshtml
+++ b/is290_project_1/Views/Assets/Create.cshtml
@@ -69,7 +69,7 @@
                 </div>
             </div>
             <div class="col-md-4">
-                <h3>Key</h3>
+                <h3>Legend</h3>
                 <hr />
                 <table class="table">
                     <thead>
