--- a/is290_project_1/Views/Employees/Create.cshtml
+++ b/is290_project_1/Views/Employees/Create.cshtml
@@ -7,10 +7,10 @@
 <h2>Create</h2>
 
 
-@using (Html.BeginForm()) 
+@using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
-    
+
     <div class="form-horizontal">
         <h4>Employee</h4>
         <hr />
@@ -18,7 +18,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.EmployeeID, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.EmployeeID, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.TextBoxFor(model => model.EmployeeID, new {@int = 100})
+                <!-- @Html.EditorFor(model => model.EmployeeID, new { htmlAttributes = new { @class = "form-control" } }) -->
                 @Html.ValidationMessageFor(model => model.EmployeeID, "", new { @class = "text-danger" })
             </div>
         </div>
