--- a/is290_project_1/Views/Home/Index.cshtml
+++ b/is290_project_1/Views/Home/Index.cshtml
@@ -2,16 +2,18 @@
     ViewBag.Title = "Home Page";
 }
 
+
 <div class="jumbotron">
     <h1>IS 290 Project 1</h1>
     <p class="lead">
-        This is a project, using MVC
+        This is a project, using MVC<br />
+        Employee Count =
     </p>
 </div>
 
 <div class="row">
     <div class="col-md-4">
-        <h2>@Html.ActionLink("Employees","Index","Employees")</h2>
+        <h2>@Html.ActionLink("Employees", "Index", "Employees")</h2>
         <p>
             Manage employee information
         </p>
